--- a/app/src/main/res/layout/item_music_list.xml
+++ b/app/src/main/res/layout/item_music_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="66dp"
         android:layout_height="66dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginVertical="8dp"
         android:scaleType="centerCrop"
         tools:background="@color/gray_light"/>
 
